--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Dreamix: Video Diffusion Models are General Video Editors</h1>
+            <h1 class="title is-1 publication-title">VT-Tricam-rPPG Dataset: Multispectral Dataset for Remote PPG</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
              <span class="author-block">
-                Abhijit Sarkar<sup>*,1</sup>,
+                Abhijit Sarkar<sup>1,2,†</sup>,
               </span>
               <span class="author-block">
-                <a href="https://horwitz.ai" target="_blank">Eliahu Horwitz</a><sup>*,1,2</sup>,
+                <a href="https://www.therealthapa.com/" target="_blank">Surendrabikram Thapa</a><sup>1</sup>,
               </span>
               <span class="author-block">
                 <a href="https://www.linkedin.com/in/dani-valevski-a3b5936/" target="_blank">Dani Valevski</a><sup>*,1</sup>,
