--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>Virginia Tech Transportation Institute,</span>
-              <span class="author-block"><sup>2</sup>Virginia Tech</span>
+              <span class="author-block"><sup>2</sup>Bradley Department of Electrical and Computer Engineering, Virginia Tech</span>
               <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution, <sup>†</sup>Indicates Equal Advising</small></span>
               <span class="eql-cntrb"><small></small></span>
             </div>
